2009-09-09    <jolyon.white@nicta.com.au>

	* OML: Release version 2.3.0.
	
	* OML: Package is now autoconfiscated.
	
	* OML: Package now builds under Mac OS X (but is not well tested
	on that platform).

	* OML: Layout of the source package has been re-organized to make
	it cleaner.

	* oml2-server: Added server capability to re-open existing
	experiment databases and add new measurements to them.  This
	allows long running experiments where the client applications may
	be restarted many times.

	This required the server to create two additional tables in the
	experiment database: '_experiment_data' and '_senders'.  The
	'_senders' table stores a mapping between the client's sender
	id (as specified in either the --oml-id command line option, the
	OML_NAME environment variable, or 'id' attribute of the XML
	configuration file on the client side) and the server-generated
	numeric id that is stored in the 'oml_sender_id' column of the
	measurement tables.  The '_experiment_metadata' table is a generic
	key-value table that can be used to store arbitrary experiment
	metadata.  Currently the OML server uses this to store the
	experiment's start-time, which is the time reference against which
	all of the client data timestamps are calculated.
	
	* oml2-server: New text-based protocol added.
	lib/client/ruby/oml.rb implements a client for this protocol.

	* oml2-server: Removed buffer overflow conditions in SQL prepared
	statement generation, and removed an unintended artificial limit
	on the size of table schema (both number of characters and number
	of columns).

	* oml2-server: Significant improvements in error condition
	handling on the server.  Clients are now dropped if the server
	detects a protocol error.

	* oml2-server: Server was given a thorough code review and
	numerous segfaults, memory leaks, and other bugs were fixed.  Ran
	the server under valgrind memcheck to find run-time memory errors,
	and fixed another bunch of numerous memory handling errors.
